# oai-rt-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  OPENAI_REALTIME_SPEC.md  README.md  deny.toml  partialdocs.md
.github/workflows/: ci.yml
.mcp-the-force/: jobs.sqlite3  sessions.sqlite3
docs/openai/: api.md  realtime-conversations.md  realtime-costs.md  realtime-models-prompting.md  realtime-server-controls.md  realtime-sip.md  realtime-transcription.md  realtime-vad.md  realtime-webrtc.md  realtime-websocket.md  realtime.md
src/: error.rs  lib.rs
src/protocol/: client_events.rs  mod.rs  models.rs  server_events.rs
src/protocol/models/: audio.rs  common.rs  items.rs  mod.rs  response.rs  session.rs  tools.rs  usage.rs
src/sdk/: builder.rs  calls.rs  events.rs  handlers.rs  mod.rs  response.rs  session.rs  tools.rs  transport.rs  voice.rs
src/transport/: rest.rs  ws.rs
tests/: sdk_calls_tests.rs  sdk_events_tests.rs  sdk_improvement_tests.rs  sdk_surface_tests.rs  serialization_tests.rs  validation_tests.rs
