[package]
name = "oai-rt-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "A high-performance, strictly-typed, and production-ready Rust client for the OpenAI Realtime API."
license = "MIT"
repository = "https://github.com/example/oai-rt-rs"
readme = "README.md"
keywords = ["openai", "realtime", "api", "client", "audio"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tokio = { version = "1.0", features = ["rt", "net", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
thiserror = "2.0"
url = "2.5"
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
