[package]
name = "oai-rt-rs"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Luka Crnkovic-Friis"]
description = "Rust SDK for the OpenAI Realtime API"
license = "MIT"
repository = "https://github.com/lukacf/oai-rt-rs"
documentation = "https://docs.rs/oai-rt-rs"
homepage = "https://github.com/lukacf/oai-rt-rs"
readme = "README.md"
keywords = ["openai", "realtime", "api", "client", "audio"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tokio = { version = "1.0", features = ["rt", "net", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
thiserror = "2.0"
url = "2.5"
tracing = "0.1"
async-trait = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
